fix sonar cloud